--- a/.github/workflows/cibuild.yml
+++ b/.github/workflows/cibuild.yml
@@ -3,7 +3,8 @@ name: Build-and-Test
 on:
   push:
     branches: [main]
-  pull_request:branches: [ main ]
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
