--- a/.github/workflows/cibuild.yml
+++ b/.github/workflows/cibuild.yml
@@ -9,6 +9,8 @@ on:
 
 jobs:
   build:
+    env:
+      configuration: release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Sources
@@ -20,6 +22,6 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
-        run: dotnet build --no-restore
+        run: dotnet build --no-restore --configuration ${{ env.configuration }}
       - name: Test
-        run: dotnet-test --no-build --verbosity normal
+        run: dotnet-test --no-build --verbosity normal --configuration ${{ env.configuration }}
