--- a/.github/workflows/cibuild.yml
+++ b/.github/workflows/cibuild.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Build
         run: dotnet build --no-restore --configuration ${{ env.configuration }}
       - name: Test
-        run: dotnet-test --no-build --verbosity normal --configuration ${{ env.configuration }}
+        run: dotnet test --no-build --verbosity normal --configuration ${{ env.configuration }}
